adds ability to make a reservation for an event
