# reservation-infrastructure/src/main/java/nl/paulderaaij/reservation/infrastructure/application/events/MakeReservation.java
@@ -1,0 +1,9 @@
+package nl.paulderaaij.reservation.infrastructure.application.events;
+
+import lombok.Data;
+
+@Data
+public class MakeReservation {
+    private String eventId;
+    private int requestedTickets;
+}
